<resources>
    <string name="app_name">Snake n Ladder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_string">Username</string>
    <string name="password_string">Password</string>
    <string name="confirm_password_string">Confirm Password</string>
    <string name="register_string">Register</string>
    <string name="back_string">Back</string>

    <string-array name="usertype">
        <item>Administrator</item>
        <item>Customer</item>
        <item>Super User</item>
    </string-array>
</resources>