<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:endIconMode="clear_text"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_username_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:hint="@string/username_string"
                />
            <!--            @string/username_string-->
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:endIconMode="clear_text"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:hint="@string/password_string"
                />
            <!--            @string/password_string-->
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:endIconMode="clear_text"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_confirm_password_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:hint="@string/confirm_password_string"
                />
            <!--            @string/confirm_password_string-->
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:text="@string/register_string"
            android:padding="5dp"
            android:background="@drawable/commonbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_back"
            android:text="@string/back_string"
            android:padding="5dp"
            android:background="@drawable/commonbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <!--    @string/register_string-->
</ScrollView>